# aether

./: .gitignore  Makefile  README.md  gleam.toml
docs/superpowers/plans/: 2026-03-20-aether-implementation.md
docs/superpowers/specs/: 2026-03-20-aether-design.md
firmware/esp32-csi-node/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/esp32-csi-node/main/: CMakeLists.txt  Kconfig.projbuild  (+1 more)
native/aether_brain/: Cargo.toml
native/aether_brain/src/: lib.rs  model.rs
native/aether_brain/src/decoder/: activity.rs  location.rs  mod.rs  pose.rs  presence.rs  vitals.rs
native/aether_signal/: Cargo.toml
priv/static/: index.html
src/: aether.gleam  aether_brain_nif.erl  aether_bridge_ffi.erl  aether_demo_ffi.erl  aether_e2e_test_ffi.erl  aether_http_test_ffi.erl  aether_listener_ffi.erl  aether_signal_nif.erl  aether_static_ffi.erl  aether_time_ffi.erl  aether_udp_ffi.erl
src/aether/: demo.gleam  orchestrator.gleam  perception.gleam  sensor.gleam  signal.gleam  space.gleam  supervisor.gleam
test/: aether_test.gleam  e2e_test.gleam  orchestrator_test.gleam  signal_test.gleam  space_test.gleam
test/condition/: pipeline_test.gleam  ring_buffer_test.gleam
test/core/: error_test.gleam  types_test.gleam
test/fusion/: engine_test.gleam  sync_test.gleam
test/nif/: brain_nif_test.gleam  signal_nif_test.gleam
test/sensor/: actor_test.gleam  parser_test.gleam  sensor_config_test.gleam
test/serve/: api_test.gleam  codec_test.gleam  ws_test.gleam
test/track/: aggregator_test.gleam  event_test.gleam  person_test.gleam  zone_test.gleam
(+36 files in other folders)
